--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
 body {
-    background: lavenderblush;
+    background: rgb(162, 114, 191);
     font-family:Tahoma, sans-serif;
 }
+
+.assignment { 
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    background: lavenderblush;
+}
+
+.assignment img {
+    width: 400px;
+    padding: 10px;
+}
+
 
 h1 {
     color:rgb(51, 5, 94);
