--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,16 @@ body {
     font-family:Tahoma, sans-serif;
 }
 
+.assignments {
+    display:flex;
+    flex-wrap:wrap;
+}
+
 .assignment { 
-    display: flex;
+    width:40%;
     padding: 10px;
     margin: 10px;
+    padding:20px 10px;
     background: lavenderblush;
 }
 
@@ -14,6 +20,8 @@ body {
     width: 400px;
     padding: 10px;
     border: 2px solid #87ab64;
+    display:block;
+    margin:auto;
 }
 
 .assignment img:hover {
@@ -22,6 +30,10 @@ body {
 
 h1 {
     color:rgb(51, 5, 94);
+    text-align:center;
+}
+
+h2 {
     text-align:center;
 }
 
