--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     margin: 10px;
     padding:20px 10px;
     background: lavenderblush;
+    box-shadow: 6px 6px 0 var(--background-color-dark);
 }
 
 .assignment img {
